tests/errors/error_args_correct.wyn
fn add(a: int, b: int) -> int {
    return a + b;
}

fn main() {
    let result = add(5);
    print(result);
}